--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -28,14 +28,13 @@
     display: inline;
     margin: 0;
     padding: 0;
-    /* font-size: 1.4rem; */
   }
 
   /* Set the img (EVrabbit logo) to a certain size */
   .footer__content img {
-    width: 40px;
-    height: 40px;
-    transform: translate(0, 13px)
+    width: 35px;
+    height: 35px;
+    /* transform: translate(0, 13px) */
   }
 
   /* CSS for the top section of the footer */
